--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,35 @@
+:root {
+--primary-color: #ff41ed;
+--secondary-color:#8109b7;
+--main-text: #f1f1f1;}
+
 body {
-    background: #222438;
+    background: #0c1845;
     }
 
-h1 {
+.hero h1 {
 font-family: 'Roboto', sans-serif;
 color: whitesmoke;
 margin-top: 150px;
 margin-left: 20px;
 font-size: 55px;
+}
+
+.hero p {
+font-family: 'Roboto', sans-serif;
+color: grey;
+margin-left: 20px;
+font-size: 20px;
+}
+
+.hero button {
+    background: none;
+    border-radius: 4px;
+    border-color: var(--main-text);
+    color:var(--main-text);
+    font-size: 16px;
+    line-height: 10px;
+    padding: 15px 20px;
+    margin-left: 20px;
+    margin-top: 20px;
 }
