--- a/src/styles.css
+++ b/src/styles.css
@@ -8,29 +8,129 @@ body {
     background: #222438;
     }
 
+.hero {
+margin-top: 200px;
+margin-left: 100px;}
+
+
 .hero h1 {
 font-family: 'Roboto', sans-serif;
 color: whitesmoke;
-margin-top: 200px;
-margin-left: 20px;
 font-size: 55px;
 }
 
 .hero p {
 font-family: 'Roboto', sans-serif;
 color: grey;
-margin-left: 20px;
 font-size: 20px;
 }
 
 .hero button {
     background: none;
     border-radius: 4px;
-    border-color: var(--main-text);
+    border-color: var(--primary-color);
     color:var(--main-text);
     font-size: 16px;
     line-height: 10px;
     padding: 15px 20px;
-    margin-left: 20px;
-    margin-top: 20px;
+    margin-top: 50px;
+}
+
+h3 {font-family: 'Roboto', sans-serif;
+color: whitesmoke;
+font-size: 42px;
+margin-top: 480px;
+
+}
+
+.container {margin-top: 70px;
+margin-left: 100px;}
+
+h2 {font-family: 'Roboto', sans-serif;
+color: whitesmoke;
+font-size: 35px;}
+
+
+.navigation-links {
+  display: flex;
+  margin-top: 40px;
+  justify-content: center;
+}
+
+.navigation-links a {
+  margin: 20px;
+}
+
+.primary-link {
+  border-radius: 4px;
+  border-color: var(--secondary-color);
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  background: none;
+  box-shadow: var(--box-shadow);
+  color: var(--primary-color);
+}
+
+.secondary-link {
+  border-radius: 4px;
+  border-color: var(--secondary-color);
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  background: none;
+  box-shadow: var(--box-shadow);
+  color: var(--secondary-color);
+}
+
+.homepage-link {
+  color: var(--primary-color);
+  text-align: center;
+  display: block;
+}
+
+ p {
+font-family: 'Roboto', sans-serif;
+  margin: 30px 0;
+  text-align: justify;
+  color: gray;
+}
+
+ p {
+  margin: 10px;
+}
+
+
+.email-link:hover {
+  text-decoration: underline;
+}
+
+.email-link {
+  display: flex;
+  justify-content: center;
+  color: var(--primary-color);
+  font-size: 28px;
+  text-decoration: none;
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+  }
+
+  .button-link {
+    display: block;
+    text-align: center;
+    margin: 0 20px;
+  }
 }
