--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: var(--default-font-family);
+  background-color: var(--secondary-color);
 }
 
 
@@ -106,3 +107,47 @@ color: var(--branding-color);
     text-align: center;
   }
 }
+  .about-section {margin-top: 100px;
+    text-align: center;
+    padding: 0;
+  }
+
+ 
+  img {border-radius: 50%;}
+
+  .content {
+    text-align: center;
+    padding: 0;
+  }
+  .content-container {
+  padding: 160px 20px;
+}
+
+.content h1 {
+
+  line-height: 80px;
+}
+
+.content h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+
+  font-family: var(--default-font-family);
+}
+
+.content p {
+  font-size: 14px;
+}
+
+.content {
+  margin: 30px;
+}
+
+.icons {color: var(--branding-color);}
+
+.contact-link {color: black;}
