--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 :root {
   --branding-color: #e6a4b4;
   --secondary-color: #f5eee6;
+  --third-color:#f3d7ca;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
