--- a/src/styles.css
+++ b/src/styles.css
@@ -180,6 +180,10 @@ footer {
   margin: 60px 0;
 }
 
+.footer p {
+  font-size: 20px;
+}
+
 footer .contact-box {
   background: var(--secondary-color);
   padding: 30px 120px;
