--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@
 body {
   font-family: var(--default-font-family);
   background-color: var(--secondary-color);
+  overflow-x: hidden;
 }
 
 .navbar-brand {color: var(--branding-color);}
@@ -219,4 +220,3 @@ footer .social-links a:hover {
   color: white;
   background: var(--branding-color);
 }
-
